	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	(REJECTED) Migrating to stash
	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


10-02-2011 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added function to close directory childrens (patch by Oliver Marks (#3175562), thanks)
		Replaced TreeBrowser`s hidden file check with the native filebrowser check (thanks to geany`s team),
			this may be fixing the bug #3157070 (Treebrowser plugin crashes Geany with files ending in ~)


14-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed nighty compilation error (reported by Enrico Tröger)


10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* ChangeLog
		Update
	* README
		Update
	* src/treebrowser.c
		Fixed warning: ISO C90 forbids mixed declarations and code (in check_hidden())
		Fixed warning: 'return' with no value, in function returning non-void (in treebrowser_checkdir())
		Fixed compilation warning with strlen()
		Description changed (taken from ubuntu`s repos)


10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	Bumped version 0.20
		Now will following the version number of geany


09-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed wrong colors in addressbar when last directory wasn`t existing,
			but then chrooting.
		"Right click" menu rearanged to looks more logically


01-11-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added dialog question when creating/removing file, to prevent from losing
			target files if they exists.


01-11-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
